Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-16985

QComboBox popup is resized/positioned in wrong way when device srceen orientation changes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.0
    • 4.7.1
    • QtSDK 1.1 TP for Windows (Qt 4.7.1), device Nokia C7 with Symbian^3 (Qt installed the one that shipped with QtSDK, version 4.7.2)
    • e28d33a6924d14afc5851a9a3587891f8507ee16

      See picture.

      I attached VERY simple sample application that I used to test Qt GUI. Generally its just a window in designer with some dropped standard widgets. I hope it will help ...

        1. MobTest1.rar
          36 kB
        2. QComboBox popup.png
          QComboBox popup.png
          280 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            trofimov Dmitry Trofimov
            algirdasss Algirdas
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes