QComboBox fix for QTBUG-16985